tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/localitiesPending.check
newSource:5: error: effect type mismatch;
 found   : (RefSet(Set()),Assigns(Map()),RefSet(Set(SymRef(value c))))
 required: (RefSet(Set()),Assigns(Map()),RefSet(Set(SymRef(value a))))
    case c: C => c
                 ^
